Core > Stack Blockchain, title fixes

--- a/_data/navigation_core.yml
+++ b/_data/navigation_core.yml
@@ -1,11 +1,11 @@
-- title: Naming Services
+- title: Naming Services Guides
   docs:
   - core/naming/introduction
   - core/naming/architecture
   - core/naming/namespaces
   - core/naming/comparison
 
-- title: Tutorials & Cookbooks
+- title: Naming Service Tutorials
   docs:
   - core/naming/tutorial_subdomains
   - core/naming/search
