feat: add neon node docs, RPC docs (#551)
* feat: add neon node docs

* docs: update peer_host for real DNS

* docs: more cleanup of neon page

* docs: optimized neon binary

* fix: typo in follower-conf filename

* feat: add info for re-installing rust toolchain

* feat: add RPC API docs

* docs: copy changes on RPC page

--- a/_data/navigation_smart.yml
+++ b/_data/navigation_smart.yml
@@ -11,9 +11,11 @@
   docs:
   - core/smart/principals
   - core/smart/functions
+  - core/smart/neon-node
 
 - title: References
   docs:
   - core/smart/clarityRef
   - core/smart/clarityCLI
   - core/smart/sdk-quickstart
+  - core/smart/rpc-api
