feat: add wallet cli to nav, title change

--- a/_data/navigation_smart.yml
+++ b/_data/navigation_smart.yml
@@ -12,6 +12,7 @@
   - core/smart/principals
   - core/smart/functions
   - core/smart/neon-node
+  - core/smart/cli-wallet-quickstart
 
 - title: References
   docs:
