--- a/_data/navigation_home.yml
+++ b/_data/navigation_home.yml
@@ -1,9 +1,9 @@
 # Categories home page navigation
 
 - title: Build Decentralized Apps
-  desc: Learn how to build decentralized applications using Blockstack's storage and authentication tools.
+  desc: Learn how to build decentralized applications using Blockstack's authentication and storage tools.
   icon: code
-  doc: browser/hello-blockstack
+  doc: develop/overview_auth
 
 - title: Build Smart Contracts
   desc: Learn how to develop smart contracts using Blockstack's smart contracting language.
