--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@
 # Site title and description
 title:              Blockstack
 description:        Docs
+incremental: true
+livereload: true
 
 # Site subpath, e.g. /blog
 baseurl:            ""
@@ -21,7 +23,7 @@ repository: blockstack/docs.blockstack
 staticman:
   branch: "master"
 
-github_editme_path: blockstack/docs.blockstack/blob/master
+github_editme_path: blockstack/docs.blockstack/edit/master
 branch_url: master
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
