--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mdx-js/loader": "1.6.6",
     "@mdx-js/mdx": "^1.6.6",
     "@mdx-js/react": "^1.6.6",
+    "@mdx-js/runtime": "^1.6.7",
     "@next/mdx": "^9.4.4",
     "@philpl/buble": "^0.19.7",
     "@reach/tooltip": "^0.10.5",
@@ -16,20 +17,25 @@
     "@types/nprogress": "^0.2.0",
     "@types/reach__tooltip": "^0.2.0",
     "algoliasearch": "^4.3.0",
+    "babel-plugin-macros": "^2.8.0",
     "docsearch.js": "^2.6.3",
     "fathom-client": "^3.0.0",
+    "front-matter": "^4.0.2",
+    "fs-extra": "^9.0.1",
     "jsx-to-string": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
-    "next": "^9.4.4",
+    "next": "^9.4.5-canary.34",
     "next-google-fonts": "^1.1.0",
     "next-mdx-enhanced": "^3.0.0",
+    "next-optimized-images": "^2.6.1",
     "nookies": "^2.3.2",
     "nprogress": "^0.2.0",
     "preact": "^10.4.4",
     "preact-render-to-string": "^5.1.4",
     "preact-ssr-prepass": "^1.0.1",
     "prettier": "^2.0.5",
+    "preval.macro": "^5.0.0",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.20.0",
     "react-children-utilities": "^2.1.2",
@@ -39,15 +45,20 @@
     "react-live": "^2.2.2",
     "react-simple-code-editor": "^0.11.0",
     "react-waypoint": "^9.0.3",
+    "remark": "^12.0.0",
     "remark-emoji": "2.1.0",
     "remark-external-links": "^6.1.0",
+    "remark-frontmatter": "^2.0.0",
     "remark-images": "2.0.0",
     "remark-slug": "6.0.0",
     "remark-unwrap-images": "2.0.0",
     "store": "^2.0.12",
+    "strip-markdown": "^3.1.2",
     "swr": "^0.2.3",
     "touchable-hook": "^1.3.0",
     "typescript": "^3.9.5",
+    "unist-util-is": "^4.0.2",
+    "unist-util-visit": "^2.0.3",
     "use-events": "^1.4.2"
   },
   "devDependencies": {
@@ -57,15 +68,17 @@
     "next-transpile-modules": "^3.3.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "rimraf": "^3.0.2",
     "styled-components": "^5.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0"
   },
   "private": true,
   "scripts": {
-    "build": "next telemetry disable && next build && next export -o build",
-    "build:analyze": "next telemetry disable && ANALYZE=true next build",
+    "build": "yarn clean:build-files && next telemetry disable && next build && next export -o build",
+    "build:analyze": "yarn clean:build-files && next telemetry disable && ANALYZE=true next build",
     "start": "next telemetry disable && NODE_ENV=production next start",
-    "dev": "next dev",
+    "clean:build-files": "rimraf .next",
+    "dev": "yarn clean:build-files && next dev",
     "export": "next export",
     "lint": "yarn lint:eslint && yarn lint:prettier",
     "lint:eslint": "eslint \"src/**/*.{ts,tsx}\" -f unix",
