--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@blockstack/ui": "^2.9.5",
     "@docsearch/react": "^1.0.0-alpha.14",
+    "@hashicorp/remark-plugins": "^3.0.0",
     "@mdx-js/loader": "1.6.6",
     "@mdx-js/mdx": "^1.6.6",
     "@mdx-js/react": "^1.6.6",
@@ -22,6 +23,7 @@
     "fathom-client": "^3.0.0",
     "front-matter": "^4.0.2",
     "fs-extra": "^9.0.1",
+    "github-slugger": "^1.3.0",
     "jsx-to-string": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
@@ -44,13 +46,17 @@
     "react-is": "^16.13.1",
     "react-live": "^2.2.2",
     "react-simple-code-editor": "^0.11.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
     "react-waypoint": "^9.0.3",
+    "react-window": "^1.8.5",
     "remark": "^12.0.0",
     "remark-emoji": "2.1.0",
     "remark-external-links": "^6.1.0",
     "remark-frontmatter": "^2.0.0",
     "remark-images": "2.0.0",
+    "remark-normalize-headings": "^2.0.0",
     "remark-slug": "6.0.0",
+    "remark-squeeze-paragraphs": "^4.0.0",
     "remark-unwrap-images": "2.0.0",
     "store": "^2.0.12",
     "strip-markdown": "^3.1.2",
