--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,3 +15,43 @@ jobs:
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           scope: ${{ secrets.VERCEL_SCOPE }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Comment on PR
+        uses: actions/github-script@v2
+        id: comment
+        if: github.event_name == 'pull_request'
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const firstLine = `The Blockstack docs have been deployed with Vercel using the code from this PR!`;
+            console.log(context);
+            const { data } = await github.issues.listComments({
+              ...context.repo,
+              issue_number: context.issue.number,
+            });
+            const vercelPreviewURLComment = data.find((comment) =>
+              comment.body.includes(firstLine)
+            );
+            const commentId = vercelPreviewURLComment && vercelPreviewURLComment.id || undefined;
+            const commentBody = `
+            #### Deploy previews
+            ${firstLine}
+
+            - [Blockstack docs](${{ steps.vercel-deployment-preview.outputs.preview-url }})
+
+            Built with commit ${context.sha}.
+            `;
+            if(context.issue.number){
+              if (commentId) {
+                await github.issues.updateComment({
+                  ...context.repo,
+                  comment_id: commentId,
+                  body: commentBody,
+                });
+              } else {
+                await github.issues.createComment({
+                  ...context.repo,
+                  issue_number: context.issue.number,
+                  body: commentBody,
+                });
+              }
+            }
