--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "fathom-client": "^3.0.0",
     "front-matter": "^4.0.2",
     "fs-extra": "^9.0.1",
+    "gatsby-remark-shiki": "^0.1.2",
     "github-slugger": "^1.3.0",
+    "gray-matter": "^4.0.2",
+    "html-react-parser": "^0.13.0",
     "jsx-to-string": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
-    "next": "^9.4.5-canary.34",
+    "next": "^9.4.5-canary.38",
     "next-google-fonts": "^1.1.0",
     "next-mdx-enhanced": "^3.0.0",
+    "next-mdx-remote": "^0.6.0",
     "next-optimized-images": "^2.6.1",
     "nookies": "^2.3.2",
     "nprogress": "^0.2.0",
@@ -59,6 +63,7 @@
     "remark-slug": "6.0.0",
     "remark-squeeze-paragraphs": "^4.0.0",
     "remark-unwrap-images": "2.0.0",
+    "shiki": "^0.1.7",
     "store": "^2.0.12",
     "strip-markdown": "^3.1.2",
     "swr": "^0.2.3",
@@ -97,7 +102,8 @@
     "typecheck:watch": "npm run typecheck -- --watch"
   },
   "resolutions": {
-    "preact": "^10.4.4"
+    "preact": "^10.4.4",
+    "shiki-languages": "file:./lib/shiki-languages"
   },
   "prettier": "@blockstack/prettier-config"
 }
