--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/runtime": "^1.6.7",
     "@next/mdx": "^9.4.4",
     "@philpl/buble": "^0.19.7",
+    "@reach/accordion": "^0.10.5",
     "@reach/tooltip": "^0.10.5",
     "@styled-system/theme-get": "^5.1.2",
     "@types/mdx-js__react": "^1.5.2",
@@ -68,6 +69,7 @@
     "strip-markdown": "^3.1.2",
     "swr": "^0.2.3",
     "touchable-hook": "^1.3.0",
+    "turndown": "^6.0.0",
     "typescript": "^3.9.5",
     "unist-util-is": "^4.0.2",
     "unist-util-visit": "^2.0.3",
