--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@blockstack/docs",
   "version": "1.0.0",
   "dependencies": {
-    "@blockstack/ui": "^2.9.5",
+    "@blockstack/ui": "^2.10.7",
     "@docsearch/react": "^1.0.0-alpha.14",
     "@hashicorp/remark-plugins": "^3.0.0",
-    "@mdx-js/loader": "1.6.6",
-    "@mdx-js/mdx": "^1.6.6",
-    "@mdx-js/react": "^1.6.6",
-    "@mdx-js/runtime": "^1.6.7",
+    "@mdx-js/loader": "1.6.13",
+    "@mdx-js/mdx": "^1.6.13",
+    "@mdx-js/react": "^1.6.13",
+    "@mdx-js/runtime": "^1.6.13",
     "@next/mdx": "^9.4.4",
     "@philpl/buble": "^0.19.7",
     "@reach/accordion": "^0.10.5",
@@ -18,7 +18,7 @@
     "@types/node": "^14.0.14",
     "@types/nprogress": "^0.2.0",
     "@types/reach__tooltip": "^0.2.0",
-    "algoliasearch": "^4.3.0",
+    "algoliasearch": "^4.3.1",
     "babel-plugin-macros": "^2.8.0",
     "babel-plugin-prismjs": "^2.0.1",
     "csvtojson": "^2.0.10",
@@ -34,7 +34,7 @@
     "jsx-to-string": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
-    "next": "^9.4.5-canary.38",
+    "next": "^9.4.5-canary.42",
     "next-google-fonts": "^1.1.0",
     "next-mdx-enhanced": "^3.0.0",
     "next-mdx-remote": "^0.6.0",
@@ -43,12 +43,12 @@
     "nprogress": "^0.2.0",
     "preact": "^10.4.4",
     "preact-render-to-string": "^5.1.4",
-    "preact-ssr-prepass": "^1.0.1",
+    "preact-ssr-prepass": "^1.1.0",
     "prettier": "^2.0.5",
     "preval.macro": "^5.0.0",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.20.0",
-    "react-children-utilities": "^2.1.2",
+    "react-children-utilities": "^2.1.3",
     "react-gesture-responder": "^2.1.0",
     "react-icons": "^3.9.0",
     "react-is": "^16.13.1",
@@ -57,7 +57,7 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-waypoint": "^9.0.3",
     "react-window": "^1.8.5",
-    "remark": "^12.0.0",
+    "remark": "^12.0.1",
     "remark-emoji": "2.1.0",
     "remark-external-links": "^6.1.0",
     "remark-frontmatter": "^2.0.0",
@@ -71,10 +71,11 @@
     "swr": "^0.2.3",
     "touchable-hook": "^1.3.0",
     "turndown": "^6.0.0",
-    "typescript": "^3.9.5",
+    "typescript": "^3.9.7",
     "unist-util-is": "^4.0.2",
     "unist-util-visit": "^2.0.3",
-    "use-events": "^1.4.2"
+    "use-events": "^1.4.2",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "@blockstack/eslint-config": "^1.0.5",
