--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "remark": "^12.0.1",
     "remark-emoji": "2.1.0",
     "remark-external-links": "^6.1.0",
+    "remark-footnotes": "^1.0.0",
     "remark-frontmatter": "^2.0.0",
     "remark-images": "2.0.0",
     "remark-normalize-headings": "^2.0.0",
