feat: shiki highlighting, content cleanup, component org

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@blockstack/docs",
   "version": "1.0.0",
   "dependencies": {
-    "@blockstack/ui": "^2.10.7",
+    "@blockstack/ui": "^2.12.2-beta.0",
     "@docsearch/react": "^1.0.0-alpha.14",
     "@hashicorp/remark-plugins": "^3.0.0",
+    "@mapbox/rehype-prism": "^0.5.0",
     "@mdx-js/loader": "1.6.13",
     "@mdx-js/mdx": "^1.6.13",
     "@mdx-js/react": "^1.6.13",
@@ -21,26 +22,29 @@
     "algoliasearch": "^4.3.1",
     "babel-plugin-macros": "^2.8.0",
     "babel-plugin-prismjs": "^2.0.1",
+    "cache-manager": "^3.3.0",
+    "cache-manager-fs-hash": "^0.0.9",
     "csvtojson": "^2.0.10",
     "docsearch.js": "^2.6.3",
     "eslint": "^7.4.0",
     "fathom-client": "^3.0.0",
     "front-matter": "^4.0.2",
     "fs-extra": "^9.0.1",
-    "gatsby-remark-shiki": "^0.1.2",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "html-react-parser": "^0.13.0",
     "jsx-to-string": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
-    "next": "^9.4.5-canary.42",
+    "micro-memoize": "^4.0.9",
+    "next": "^9.4.5-canary.45",
     "next-google-fonts": "^1.1.0",
     "next-mdx-enhanced": "^3.0.0",
     "next-mdx-remote": "^0.6.0",
     "next-optimized-images": "^2.6.1",
     "nookies": "^2.3.2",
     "nprogress": "^0.2.0",
+    "p-all": "^3.0.0",
     "preact": "^10.4.4",
     "preact-render-to-string": "^5.1.4",
     "preact-ssr-prepass": "^1.1.0",
@@ -55,7 +59,6 @@
     "react-live": "^2.2.2",
     "react-simple-code-editor": "^0.11.0",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "react-waypoint": "^9.0.3",
     "react-window": "^1.8.5",
     "remark": "^12.0.1",
     "remark-emoji": "2.1.0",
@@ -64,21 +67,26 @@
     "remark-frontmatter": "^2.0.0",
     "remark-images": "2.0.0",
     "remark-normalize-headings": "^2.0.0",
+    "remark-parse": "^8.0.3",
     "remark-slug": "6.0.0",
     "remark-squeeze-paragraphs": "^4.0.0",
     "remark-unwrap-images": "2.0.0",
+    "remark-vscode": "^1.0.0-beta.1",
     "store": "^2.0.12",
     "strip-markdown": "^3.1.2",
     "swr": "^0.2.3",
     "touchable-hook": "^1.3.0",
     "turndown": "^6.0.0",
     "typescript": "^3.9.7",
+    "unist-builder": "^2.0.3",
     "unist-util-is": "^4.0.2",
+    "unist-util-select": "^3.0.1",
     "unist-util-visit": "^2.0.3",
     "use-events": "^1.4.2",
     "webpack": "^4.43.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.10.4",
     "@blockstack/eslint-config": "^1.0.5",
     "@blockstack/prettier-config": "^0.0.6",
     "@next/bundle-analyzer": "^9.4.4",
@@ -92,10 +100,10 @@
   },
   "private": true,
   "scripts": {
-    "build": "yarn clean:build-files && next telemetry disable && NODE_ENV=production next build && next export -o build",
+    "build": "yarn clean:build-files && next telemetry disable && NODE_ENV=production next build",
     "build:analyze": "yarn clean:build-files && next telemetry disable && NODE_ENV=production ANALYZE=true next build",
     "start": "next telemetry disable && NODE_ENV=production next start",
-    "clean:build-files": "rimraf .next",
+    "clean:build-files": "rimraf .next && rimraf .cache",
     "dev": "yarn clean:build-files && next dev",
     "export": "next export",
     "lint": "yarn lint:eslint && yarn lint:prettier",
