--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
     "micro-memoize": "^4.0.9",
-    "next": "^9.4.5-canary.45",
+    "next": "^9.5.0",
     "next-google-fonts": "^1.1.0",
     "next-mdx-enhanced": "^3.0.0",
     "next-mdx-remote": "^0.6.0",
