--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
     "micro-memoize": "^4.0.9",
-    "next": "^9.5.0",
+    "next": "^9.5.1-canary.0",
     "next-google-fonts": "^1.1.0",
     "next-mdx-enhanced": "^3.0.0",
     "next-mdx-remote": "^0.6.0",
@@ -54,6 +54,7 @@
     "prismjs": "^1.20.0",
     "react-children-utilities": "^2.1.3",
     "react-gesture-responder": "^2.1.0",
+    "react-headroom": "^3.0.0",
     "react-icons": "^3.9.0",
     "react-is": "^16.13.1",
     "react-live": "^2.2.2",
@@ -65,13 +66,14 @@
     "remark-external-links": "^6.1.0",
     "remark-footnotes": "^1.0.0",
     "remark-frontmatter": "^2.0.0",
+    "remark-heading-id": "^1.0.0",
     "remark-images": "2.0.0",
     "remark-normalize-headings": "^2.0.0",
     "remark-parse": "^8.0.3",
     "remark-slug": "6.0.0",
     "remark-squeeze-paragraphs": "^4.0.0",
     "remark-unwrap-images": "2.0.0",
-    "remark-vscode": "^1.0.0-beta.1",
+    "remark-vscode": "^1.0.0-beta.2",
     "store": "^2.0.12",
     "strip-markdown": "^3.1.2",
     "swr": "^0.2.3",
@@ -82,8 +84,7 @@
     "unist-util-is": "^4.0.2",
     "unist-util-select": "^3.0.1",
     "unist-util-visit": "^2.0.3",
-    "use-events": "^1.4.2",
-    "webpack": "^4.43.0"
+    "use-events": "^1.4.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.4",
