--- a/package.json
+++ b/package.json
@@ -2,26 +2,22 @@
   "name": "@blockstack/docs",
   "version": "1.0.0",
   "dependencies": {
-    "@blockstack/ui": "^2.12.2-beta.0",
+    "@blockstack/ui": "2.12.2-beta.0",
     "@docsearch/react": "^1.0.0-alpha.24",
     "@hashicorp/remark-plugins": "^3.0.0",
-    "@mapbox/rehype-prism": "^0.5.0",
-    "@mdx-js/loader": "1.6.13",
-    "@mdx-js/mdx": "^1.6.13",
-    "@mdx-js/react": "^1.6.13",
-    "@mdx-js/runtime": "^1.6.13",
+    "@mdx-js/loader": "1.6.15",
+    "@mdx-js/mdx": "^1.6.15",
+    "@mdx-js/react": "^1.6.15",
     "@next/mdx": "^9.4.4",
-    "@philpl/buble": "^0.19.7",
     "@reach/accordion": "^0.10.5",
     "@reach/tooltip": "^0.10.5",
     "@styled-system/theme-get": "^5.1.2",
     "@types/mdx-js__react": "^1.5.2",
-    "@types/node": "^14.0.14",
+    "@types/node": "^14.0.27",
     "@types/nprogress": "^0.2.0",
     "@types/reach__tooltip": "^0.2.0",
     "algoliasearch": "^4.3.1",
     "babel-plugin-macros": "^2.8.0",
-    "babel-plugin-prismjs": "^2.0.1",
     "cache-manager": "^3.3.0",
     "cache-manager-fs-hash": "^0.0.9",
     "csvtojson": "^2.0.10",
@@ -32,17 +28,14 @@
     "fs-extra": "^9.0.1",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
+    "hast-util-to-string": "^1.0.4",
     "html-react-parser": "^0.13.0",
-    "jsx-to-string": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
     "micro-memoize": "^4.0.9",
     "next": "^9.5.1-canary.0",
     "next-google-fonts": "^1.1.0",
-    "next-mdx-enhanced": "^3.0.0",
     "next-mdx-remote": "^0.6.0",
-    "next-optimized-images": "^2.6.1",
-    "nookies": "^2.3.2",
     "nprogress": "^0.2.0",
     "p-all": "^3.0.0",
     "preact": "^10.4.4",
@@ -50,17 +43,7 @@
     "preact-ssr-prepass": "^1.1.0",
     "prettier": "^2.0.5",
     "preval.macro": "^5.0.0",
-    "prism-react-renderer": "^1.1.1",
-    "prismjs": "^1.20.0",
-    "react-children-utilities": "^2.1.3",
     "react-gesture-responder": "^2.1.0",
-    "react-headroom": "^3.0.0",
-    "react-icons": "^3.9.0",
-    "react-is": "^16.13.1",
-    "react-live": "^2.2.2",
-    "react-simple-code-editor": "^0.11.0",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.5",
     "remark": "^12.0.1",
     "remark-emoji": "2.1.0",
     "remark-external-links": "^6.1.0",
@@ -70,16 +53,16 @@
     "remark-images": "2.0.0",
     "remark-normalize-headings": "^2.0.0",
     "remark-parse": "^8.0.3",
+    "remark-sectionize": "^1.1.1",
     "remark-slug": "6.0.0",
     "remark-squeeze-paragraphs": "^4.0.0",
     "remark-unwrap-images": "2.0.0",
     "remark-vscode": "^1.0.0-beta.2",
-    "store": "^2.0.12",
     "strip-markdown": "^3.1.2",
     "swr": "^0.2.3",
-    "touchable-hook": "^1.3.0",
     "turndown": "^6.0.0",
     "typescript": "^3.9.7",
+    "unified-vscode": "^1.0.0-beta.0",
     "unist-builder": "^2.0.3",
     "unist-util-is": "^4.0.2",
     "unist-util-select": "^3.0.1",
@@ -91,13 +74,13 @@
     "@blockstack/eslint-config": "^1.0.5",
     "@blockstack/prettier-config": "^0.0.6",
     "@next/bundle-analyzer": "^9.4.4",
-    "babel-plugin-styled-components": "^1.10.7",
-    "next-transpile-modules": "^3.3.0",
+    "babel-plugin-styled-components": "^1.11.0",
+    "next-transpile-modules": "^4.0.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "rimraf": "^3.0.2",
     "styled-components": "^5.0.1",
-    "tsconfig-paths-webpack-plugin": "^3.2.0"
+    "tsconfig-paths-webpack-plugin": "^3.3.0"
   },
   "private": true,
   "scripts": {
@@ -116,7 +99,8 @@
     "typecheck:watch": "npm run typecheck -- --watch"
   },
   "resolutions": {
-    "preact": "^10.4.4"
+    "preact": "^10.4.4",
+    "@blockstack/ui": "2.12.2-beta.0"
   },
   "prettier": "@blockstack/prettier-config"
 }
