--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "preval.macro": "^5.0.0",
     "react-gesture-responder": "^2.1.0",
     "remark": "^12.0.1",
+    "remark-custom-blocks": "^2.5.0",
     "remark-emoji": "2.1.0",
     "remark-external-links": "^6.1.0",
     "remark-footnotes": "^1.0.0",
