--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-macros": "^2.8.0",
     "cache-manager": "^3.3.0",
     "cache-manager-fs-hash": "^0.0.9",
+    "capsize": "^1.1.0",
     "csvtojson": "^2.0.10",
     "docsearch.js": "^2.6.3",
     "fathom-client": "^3.0.0",
@@ -64,7 +65,7 @@
     "swr": "^0.2.3",
     "turndown": "^6.0.0",
     "typescript": "^3.9.7",
-    "unified-vscode": "^1.0.0-beta.0",
+    "unified-vscode": "^1.0.0-beta.1",
     "unist-builder": "^2.0.3",
     "unist-util-is": "^4.0.2",
     "unist-util-select": "^3.0.1",
