--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -5,14 +5,14 @@ sections:
       - path: /smart-contracts
         pages:
           - path: /overview
-          - path: /testing-contracts
           - path: /principals
-          - path: /running-testnet-node
+          - path: /running-a-testnet-node
         sections:
           - title: Tutorials
             pages:
               - path: /hello-world-tutorial
               - path: /counter-tutorial
+              - path: /testing-contracts
               - path: /signing-transactions
       - path: /mining # is an overview page
 
@@ -57,6 +57,13 @@ sections:
             pages:
               - path: /install-api
               - path: /installing-memcached
+      - path: /stacks-wallet
+        pages:
+          - path: /overview
+          - path: /install
+          - path: /usage
+          - path: /security
+          - path: /troubleshooting
       - path: /naming-services
         pages:
           - path: /overview
@@ -92,11 +99,12 @@ sections:
       - path: /contributing
 
   - title: References
+    usePageTitles: true
     pages:
-      - path: /clarity-reference
-      - path: /blockstack-cli-reference
-      - path: /stacks-blockchain-reference
-      - path: /stacks-rpc-api-reference
+      - path: /clarity-language
+      - path: /blockstack-cli
+      - path: /stacks-blockchain
+      - path: /stacks-rpc-api
       - path: /faqs
       - path: /glossary
       - path: /deploy-tips
