--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@next/mdx": "^9.4.4",
     "@reach/accordion": "^0.10.5",
     "@reach/tooltip": "^0.10.5",
-    "@styled-system/css": "^5.1.5",
     "@styled-system/theme-get": "^5.1.2",
     "@types/mdx-js__react": "^1.5.2",
     "@types/node": "^14.0.27",
@@ -22,6 +21,7 @@
     "cache-manager": "^3.3.0",
     "cache-manager-fs-hash": "^0.0.9",
     "capsize": "^1.1.0",
+    "csstype": "^3.0.2",
     "csvtojson": "^2.0.10",
     "docsearch.js": "^2.6.3",
     "fathom-client": "^3.0.0",
