feat: copy button, formatting, link previews

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@blockstack/docs",
   "version": "1.0.0",
   "dependencies": {
-    "@blockstack/ui": "2.12.2-beta.0",
-    "@docsearch/react": "^1.0.0-alpha.26",
+    "@blockstack/ui": "file:.yalc/@blockstack/ui",
+    "@docsearch/react": "^1.0.0-alpha.27",
     "@hashicorp/remark-plugins": "^3.0.0",
-    "@mdx-js/loader": "1.6.15",
+    "@mdx-js/loader": "1.6.16",
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
     "@next/mdx": "^9.4.4",
@@ -16,7 +16,7 @@
     "@types/node": "^14.0.27",
     "@types/nprogress": "^0.2.0",
     "@types/reach__tooltip": "^0.2.0",
-    "algoliasearch": "^4.3.1",
+    "algoliasearch": "^4.4.0",
     "babel-plugin-macros": "^2.8.0",
     "cache-manager": "^3.3.0",
     "cache-manager-fs-hash": "^0.0.9",
@@ -34,15 +34,15 @@
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
     "micro-memoize": "^4.0.9",
-    "next": "^9.5.2-canary.7",
+    "next": "^9.5.2-canary.9",
     "next-fonts": "^1.4.0",
     "next-google-fonts": "^1.1.0",
     "next-mdx-remote": "^0.6.0",
     "nprogress": "^0.2.0",
     "p-all": "^3.0.0",
-    "preact": "^10.4.4",
+    "preact": "^10.4.7",
     "preact-render-to-string": "^5.1.4",
-    "preact-ssr-prepass": "^1.1.0",
+    "preact-ssr-prepass": "^1.1.1",
     "prettier": "^2.0.5",
     "preval.macro": "^5.0.0",
     "react-gesture-responder": "^2.1.0",
@@ -63,7 +63,7 @@
     "remark-unwrap-images": "2.0.0",
     "remark-vscode": "^1.0.0-beta.2",
     "strip-markdown": "^3.1.2",
-    "swr": "^0.2.3",
+    "swr": "^0.3.0",
     "turndown": "^6.0.0",
     "typescript": "^3.9.7",
     "unified-vscode": "^1.0.0-beta.1",
