--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@blockstack/docs",
   "version": "1.0.0",
   "dependencies": {
-    "@blockstack/ui": "file:.yalc/@blockstack/ui",
+    "@blockstack/ui": "2.12.2-beta.0",
     "@docsearch/react": "^1.0.0-alpha.27",
     "@hashicorp/remark-plugins": "^3.0.0",
     "@mdx-js/loader": "1.6.16",
