feat: better content, stacks-blockchain overview

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -45,7 +45,7 @@ sections:
       - path: /stacks-blockchain
         pages:
           - path: /overview
-          - path: /testnet
+          - path: /testnet-node
           - path: /best-practices
           - path: /wire-format
           - path: /atlas
