build: update deps

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "dependencies": {
     "@blockstack/ui": "2.12.2-beta.0",
+    "@docsearch/css": "^1.0.0-alpha.27",
     "@docsearch/react": "^1.0.0-alpha.27",
     "@hashicorp/remark-plugins": "^3.0.0",
     "@mdx-js/loader": "1.6.16",
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
-    "@next/mdx": "^9.4.4",
+    "@next/mdx": "^9.5.2",
     "@reach/accordion": "^0.10.5",
     "@reach/tooltip": "^0.10.5",
     "@styled-system/theme-get": "^5.1.2",
@@ -34,7 +35,7 @@
     "lodash.debounce": "^4.0.8",
     "mdi-react": "7.3.0",
     "micro-memoize": "^4.0.9",
-    "next": "^9.5.2-canary.17",
+    "next": "^9.5.2",
     "next-fonts": "^1.4.0",
     "next-google-fonts": "^1.1.0",
     "next-mdx-remote": "^0.6.0",
@@ -77,7 +78,7 @@
     "@babel/preset-react": "^7.10.4",
     "@blockstack/eslint-config": "^1.0.5",
     "@blockstack/prettier-config": "^0.0.6",
-    "@next/bundle-analyzer": "^9.4.4",
+    "@next/bundle-analyzer": "^9.5.2",
     "babel-plugin-styled-components": "^1.11.0",
     "eslint": "^7.6.0",
     "husky": "^4.2.5",
