--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "prettier": "^2.0.5",
     "preval.macro": "^5.0.0",
     "react-gesture-responder": "^2.1.0",
+    "react-intersection-observer": "^8.26.2",
+    "react-spring": "^8.0.27",
     "remark": "^12.0.1",
     "remark-custom-blocks": "^2.5.0",
     "remark-emoji": "2.1.0",
@@ -73,6 +75,7 @@
     "unist-util-select": "^3.0.1",
     "unist-util-visit": "^2.0.3",
     "use-events": "^1.4.2",
+    "use-is-in-viewport": "^1.0.9",
     "yaml-loader": "^0.6.0"
   },
   "devDependencies": {
