feat: stacks integration guide, initial commit

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -56,6 +56,7 @@ sections:
         sections:
           - title: Tutorials
             pages:
+              - path: /broadcasting-transactions
               - path: /install-api
               - path: /installing-memcached
       - path: /stacks-wallet
