feat: add new pages for guides

--- a/src/common/navigation.yaml
+++ b/src/common/navigation.yaml
@@ -45,6 +45,10 @@ sections:
       - path: /stacks-blockchain
         pages:
           - path: /overview
+          - path: /testnet
+          - path: /accounts
+          - path: /transactions
+          - path: /network
         sections:
           - title: Tutorials
             pages:
