--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "dependencies": {
     "@docsearch/css": "^1.0.0-alpha.27",
     "@docsearch/react": "^1.0.0-alpha.27",
-    "@emotion/babel-plugin": "^11.0.0-next.15",
+    "@emotion/babel-plugin": "^11.0.0-next.17",
     "@emotion/babel-preset-css-prop": "^11.0.0-next.10",
     "@emotion/cache": "^11.0.0-next.15",
     "@emotion/core": "^11.0.0-next.10",
     "@emotion/css": "^11.0.0-next.15",
-    "@emotion/react": "^11.0.0-next.15",
-    "@emotion/server": "^11.0.0-next.15",
+    "@emotion/react": "^11.0.0-next.17",
+    "@emotion/server": "^11.0.0-next.17",
     "@hashicorp/remark-plugins": "^3.0.0",
     "@mdx-js/loader": "1.6.16",
     "@mdx-js/mdx": "^1.6.16",
@@ -22,10 +22,10 @@
     "@stacks/ui-core": "^1.0.0-beta.6",
     "@styled-system/theme-get": "^5.1.2",
     "@types/mdx-js__react": "^1.5.2",
-    "@types/node": "^14.6.4",
+    "@types/node": "^14.10.1",
     "@types/nprogress": "^0.2.0",
     "@types/reach__tooltip": "^0.2.0",
-    "algoliasearch": "^4.4.0",
+    "algoliasearch": "^4.5.1",
     "babel-plugin-macros": "^2.8.0",
     "cache-manager": "^3.4.0",
     "cache-manager-fs-hash": "^0.0.9",
@@ -47,7 +47,7 @@
     "mdi-react": "7.3.0",
     "micro-memoize": "^4.0.9",
     "modern-normalize": "^1.0.0",
-    "next": "^9.5.3",
+    "next": "^9.5.4-canary.15",
     "next-fonts": "^1.4.0",
     "next-mdx-remote": "^1.0.0",
     "nprogress": "^0.2.0",
@@ -58,7 +58,7 @@
     "prettier": "^2.1.1",
     "preval.macro": "^5.0.0",
     "react-gesture-responder": "^2.1.0",
-    "react-intersection-observer": "^8.27.1",
+    "react-intersection-observer": "^8.28.5",
     "react-spring": "^8.0.27",
     "remark": "^12.0.1",
     "remark-custom-blocks": "^2.5.0",
@@ -94,13 +94,13 @@
     "@blockstack/eslint-config": "^1.0.5",
     "@blockstack/prettier-config": "^0.0.6",
     "@next/bundle-analyzer": "^9.5.3",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
     "babel-plugin-styled-components": "^1.11.0",
-    "eslint": "^7.8.1",
+    "eslint": "^7.9.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.2.5",
+    "husky": "^4.3.0",
     "next-transpile-modules": "^4.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
