--- a/.github/workflows/deploy-prs.yml
+++ b/.github/workflows/deploy-prs.yml
@@ -5,6 +5,10 @@ jobs:
   vercel-deployment:
     runs-on: ubuntu-latest
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.5.0
+        with:
+          access_token: ${{ github.token }}
       - uses: actions/checkout@v2
       - uses: aulneau/vercel-action@v19.0.2+3
         id: vercel_deployment_preview
